// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSelectorItem when asked to render type hour active renders type hour active 1`] = `
<button
  aria-label="Select 15 hour"
  className="px-3 py-1 rounded-lg hover:bg-primary-100 w-full text-black dark:text-white text-base bg-primary-300 text-white hover:bg-primary-300"
  data-test-id="selectHour15Button"
  id="selectHour15Button"
  onClick={[Function]}
  type="button"
>
  15
</button>
`;

exports[`TimeSelectorItem when asked to render type hour renders type hour 1`] = `
<button
  aria-label="Select 15 hour"
  className="px-3 py-1 rounded-lg hover:bg-primary-100 w-full text-black dark:text-white text-base"
  data-test-id="selectHour15Button"
  id="selectHour15Button"
  onClick={[Function]}
  type="button"
>
  15
</button>
`;

exports[`TimeSelectorItem when asked to render type minute active renders type minute active 1`] = `
<button
  aria-label="Select 35 minute"
  className="px-3 py-1 rounded-lg hover:bg-primary-100 w-full text-black dark:text-white text-base bg-primary-300 text-white hover:bg-primary-300"
  data-test-id="selectMinute35Button"
  id="selectMinute35Button"
  onClick={[Function]}
  type="button"
>
  35
</button>
`;

exports[`TimeSelectorItem when asked to render type minute renders type minute 1`] = `
<button
  aria-label="Select 35 minute"
  className="px-3 py-1 rounded-lg hover:bg-primary-100 w-full text-black dark:text-white text-base"
  data-test-id="selectMinute35Button"
  id="selectMinute35Button"
  onClick={[Function]}
  type="button"
>
  35
</button>
`;
